--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
 </head>
 <body>
-<h1 align="center">登录</h1>
-<form action="/login" method="post">
-    <p>账号：<input type="text" name="username"></p>
-    <p>密码：<input type="password" name="password"/></p>
-    <p><input type="submit" value="登录"></p>
-</form>
+<div class="text" style=" text-align:center;">
+<a th:href="@{lu}">登录</a>
+<a th:href="@{rt}">注册</a>
+</div>
 </body>
 </html>
