--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,85 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
+    <script type="text/javascript" src="/js/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $("#register").click(function(){
+                $("#form1").show();
+                $("#db").hide();
+            });
+            $("#gb1").click(function(){
+                $("#db").show();
+                $("#form1").hide();
+            });
+
+            $("#login").click(function(){
+                $("#form2").show();
+                $("#db").hide();
+            });
+            $("#gb2").click(function(){
+                $("#db").show();
+                $("#form2").hide();
+            });
+
+        });
+    </script>
+    <style>
+        form{
+            display:none;
+        }
+
+    </style>
     <meta charset="UTF-8">
-    <title>首页</title>
+    <title>登录注册页面</title>
 </head>
 <body>
-<div class="text" style=" text-align:center;">
-<a th:href="@{lu}">登录</a>
-<a th:href="@{rt}">注册</a>
+<div id="db" align="center" >
+    <p><input type="button" value="登录" style="width: 500px; right: 200px;"  id="login"/></p>
+    <p><input type="button"  value="注册"  style="width: 500px; right: 200px;"  id="register"/></p>
 </div>
+<form action="/toregister" method="post" id="form1">
+    <div align="center" class="div1">
+        <div align="left" style="border:5px solid gainsboro; width: 300px; right: 150px; background-color:gainsboro;">
+
+            <p> 登入名:&nbsp;<input type="text" name="loginname"></p>
+
+            <p>用户名:&nbsp;<input type="text" name="username"></p>
+
+            <p> 密码:&nbsp;<input type="text" name="password"></p>
+
+            <p> 性别:&nbsp;<select id="sid" name="sex" style="width: 177px;" onchange="selectcity()">
+                <option>---请选择---</option>
+                <option value="男" selected="selected">男</option>
+                <option value="女">女</option>
+            </select></p>
+
+            <p> 身份证:&nbsp;<input type="text" name="identityCode"></p>
+
+            <p> 邮箱:&nbsp;<input type="text" name="email"></p>
+
+            <p>电话:&nbsp;<input type="text" name="mobile"></p>
+
+            <p> 类型:&nbsp;<input style="color: darkgrey;" type="text" name="type" value="0" readonly="readonly"><span
+                    style=" color: red;; font-size: 1px;">不可更改</span></p>
+
+            <p><input type="submit" style="width: 300px; right: 200px;" value="注册"></p>
+            <p><input type="button" style="width: 300px; right: 200px;" id="gb1" value="关闭"></p>
+        </div>
+        <br>
+    </div>
+</form>
+
+<form action="/login" method="post" id="form2">
+    <div align="center">
+        <div align="left" style="border:5px solid gainsboro; width: 300px; right: 150px; background-color:gainsboro;">
+            <p align="center">账号：<input type="text" name="username"></p>
+            <p align="center">密码：<input type="password" name="password"/></p>
+            <p><input type="submit" style="width: 300px; right: 200px;" value="登录"></p>
+            <p><input type="button" style="width: 300px; right: 200px;" id="gb2" value="关闭"></p>
+        </div>
+    </div>
+</form>
+
 </body>
 </html>
